--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^4.0.2",
     "mariadb": "^3.1.0",
     "next": "10.2.3",
+    "oracledb": "^5.5.0",
     "react": "16.14.0",
     "react-dom": "16.14.0"
   },
