--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "isomorphic-unfetch": "^4.0.2",
     "mariadb": "^3.1.0",
     "next": "10.2.3",
